--- a/index.html
+++ b/index.html
@@ -126,6 +126,18 @@
  
 
 
+    <!-- newsletter -->
+
+    <div class="newsletter">
+        <h3>Subscribe For New features</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, necessitatibus sit labore quos perspiciatis minima alias, ea foconsequatur, blanditiis fuga sequi maiores optio earum laborum ipsam omnis mollitia recusandae! Aperiam.</p>
+      <form action="">
+          <input type="email" placeholder="enter your email">
+          <input type="submit" value="subscribe">
+      </form>
+
+    </div>
+
 
 
 
