--- a/index.html
+++ b/index.html
@@ -138,7 +138,75 @@
 
     </div>
 
+  <!-- review -->
 
+  <section class="review" id="review">
+      <h1 class="heading">people's review</h1>
+      <div class="box-container">
+
+          <div class="box">
+              <i class="fas fa-quote-right"></i>
+              <div class="user">
+                  <img src="img/pic1.png" alt="">
+                  <h3>john ceo</h3>
+                  <div class="stars">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                  </div>
+
+                  <div class="comment">
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore doloremque provident velit reiciendis! Dolorum quidem corrupti maiores rem molestias quibusdam voluptatum esse, error incidunt sequi, ipsam cumque, maxime autem adipisci! Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus dolorem hic officia minima architecto excepturi consectetur accusantium molestiae, recusandae ullam quidem cum. Totam tempora reiciendis consequuntur, omnis commodi explicabo?
+                  </div>
+              </div>
+          </div>
+
+
+          
+          <div class="box">
+            <i class="fas fa-quote-right"></i>
+            <div class="user">
+                <img src="img/pic2.png" alt="">
+                <h3>john ceo</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+
+                <div class="comment">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore doloremque provident velit reiciendis! Dolorum quidem corrupti maiores rem molestias quibusdam voluptatum esse, error incidunt sequi, ipsam cumque, maxime autem adipisci! Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus dolorem hic officia minima architecto excepturi consectetur accusantium molestiae, recusandae ullam quidem cum. Totam tempora reiciendis consequuntur, omnis commodi explicabo?
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="box">
+            <i class="fas fa-quote-right"></i>
+            <div class="user">
+                <img src="img/pic3.png" alt="">
+                <h3>john ceo</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+
+                <div class="comment">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore doloremque provident velit reiciendis! Dolorum quidem corrupti maiores rem molestias quibusdam voluptatum esse, error incidunt sequi, ipsam cumque, maxime autem adipisci! Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus dolorem hic officia minima architecto excepturi consectetur accusantium molestiae, recusandae ullam quidem cum. Totam tempora reiciendis consequuntur, omnis commodi explicabo?
+                </div>
+            </div>
+        </div>
+
+      </div>
+  </section>
 
 
 
