--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     </div>
 
-  <!-- review -->
+  <!-- review section -->
 
   <section class="review" id="review">
       <h1 class="heading">people's review</h1>
