--- a/index.html
+++ b/index.html
@@ -123,92 +123,154 @@
 
 
     </section>
- 
+
 
 
     <!-- newsletter -->
 
     <div class="newsletter">
         <h3>Subscribe For New features</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, necessitatibus sit labore quos perspiciatis minima alias, ea foconsequatur, blanditiis fuga sequi maiores optio earum laborum ipsam omnis mollitia recusandae! Aperiam.</p>
-      <form action="">
-          <input type="email" placeholder="enter your email">
-          <input type="submit" value="subscribe">
-      </form>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, necessitatibus sit labore quos perspiciatis
+            minima alias, ea foconsequatur, blanditiis fuga sequi maiores optio earum laborum ipsam omnis mollitia
+            recusandae! Aperiam.</p>
+        <form action="">
+            <input type="email" placeholder="enter your email">
+            <input type="submit" value="subscribe">
+        </form>
 
     </div>
 
-  <!-- review section -->
+    <!-- review section -->
 
-  <section class="review" id="review">
-      <h1 class="heading">people's review</h1>
-      <div class="box-container">
+    <section class="review" id="review">
+        <h1 class="heading">people's review</h1>
+        <div class="box-container">
 
-          <div class="box">
-              <i class="fas fa-quote-right"></i>
-              <div class="user">
-                  <img src="img/pic1.png" alt="">
-                  <h3>john ceo</h3>
-                  <div class="stars">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                  </div>
+            <div class="box">
+                <i class="fas fa-quote-right"></i>
+                <div class="user">
+                    <img src="img/pic1.png" alt="">
+                    <h3>john ceo</h3>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
 
-                  <div class="comment">
-                      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore doloremque provident velit reiciendis! Dolorum quidem corrupti maiores rem molestias quibusdam voluptatum esse, error incidunt sequi, ipsam cumque, maxime autem adipisci! Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus dolorem hic officia minima architecto excepturi consectetur accusantium molestiae, recusandae ullam quidem cum. Totam tempora reiciendis consequuntur, omnis commodi explicabo?
-                  </div>
-              </div>
-          </div>
-
-
-          
-          <div class="box">
-            <i class="fas fa-quote-right"></i>
-            <div class="user">
-                <img src="img/pic2.png" alt="">
-                <h3>john ceo</h3>
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
-                </div>
-
-                <div class="comment">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore doloremque provident velit reiciendis! Dolorum quidem corrupti maiores rem molestias quibusdam voluptatum esse, error incidunt sequi, ipsam cumque, maxime autem adipisci! Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus dolorem hic officia minima architecto excepturi consectetur accusantium molestiae, recusandae ullam quidem cum. Totam tempora reiciendis consequuntur, omnis commodi explicabo?
+                    <div class="comment">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore doloremque provident velit
+                        reiciendis! Dolorum quidem corrupti maiores rem molestias quibusdam voluptatum esse, error
+                        incidunt sequi, ipsam cumque, maxime autem adipisci! Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Explicabo minus dolorem hic officia minima architecto excepturi consectetur
+                        accusantium molestiae, recusandae ullam quidem cum. Totam tempora reiciendis consequuntur, omnis
+                        commodi explicabo?
+                    </div>
                 </div>
             </div>
-        </div>
 
 
 
-        <div class="box">
-            <i class="fas fa-quote-right"></i>
-            <div class="user">
-                <img src="img/pic3.png" alt="">
-                <h3>john ceo</h3>
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
+            <div class="box">
+                <i class="fas fa-quote-right"></i>
+                <div class="user">
+                    <img src="img/pic2.png" alt="">
+                    <h3>john ceo</h3>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
 
-                <div class="comment">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore doloremque provident velit reiciendis! Dolorum quidem corrupti maiores rem molestias quibusdam voluptatum esse, error incidunt sequi, ipsam cumque, maxime autem adipisci! Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus dolorem hic officia minima architecto excepturi consectetur accusantium molestiae, recusandae ullam quidem cum. Totam tempora reiciendis consequuntur, omnis commodi explicabo?
+                    <div class="comment">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore doloremque provident velit
+                        reiciendis! Dolorum quidem corrupti maiores rem molestias quibusdam voluptatum esse, error
+                        incidunt sequi, ipsam cumque, maxime autem adipisci! Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Explicabo minus dolorem hic officia minima architecto excepturi consectetur
+                        accusantium molestiae, recusandae ullam quidem cum. Totam tempora reiciendis consequuntur, omnis
+                        commodi explicabo?
+                    </div>
                 </div>
             </div>
+
+
+
+            <div class="box">
+                <i class="fas fa-quote-right"></i>
+                <div class="user">
+                    <img src="img/pic3.png" alt="">
+                    <h3>john ceo</h3>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+
+                    <div class="comment">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore doloremque provident velit
+                        reiciendis! Dolorum quidem corrupti maiores rem molestias quibusdam voluptatum esse, error
+                        incidunt sequi, ipsam cumque, maxime autem adipisci! Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Explicabo minus dolorem hic officia minima architecto excepturi consectetur
+                        accusantium molestiae, recusandae ullam quidem cum. Totam tempora reiciendis consequuntur, omnis
+                        commodi explicabo?
+                    </div>
+                </div>
+            </div>
+
         </div>
+    </section>
 
-      </div>
-  </section>
+    <!-- pricing -->
+    <secion class="pricing" id="pricing">
+
+        <h1 class="heading">Our pricing Plans</h1>
+
+        <div class="box-container">
+
+            <div class="box">
+                <h3 class="title">basic</h3>
+                <div class="price">$10 <span>/monthly</span></div>
+                <ul>
+                    <li><i class="fas fa-check"></i>1000+ downloads</li>
+                    <li><i class="fas fa-check"></i>No transaction fees</li>
+                    <li><i class="fas fa-times"></i>unlimited storage</li>
+                    <li><i class="fas fa-times"></i>5 downloads</li>
+                </ul>
+                <a href="#" class="btn">check out</a>
+            </div>
+
+            <div class="box">
+                <h3 class="title">standard</h3>
+                <div class="price">$15 <span>/monthly</span></div>
+                <ul>
+                    <li><i class="fas fa-check"></i>1000+ downloads</li>
+                    <li><i class="fas fa-check"></i>No transaction fees</li>
+                    <li><i class="fas fa-check"></i>unlimited storage</li>
+                    <li><i class="fas fa-times"></i>5 downloads</li>
+                </ul>
+                <a href="#" class="btn">check out</a>
+            </div>
+
+            <div class="box">
+                <h3 class="title">premium</h3>
+                <div class="price">$20 <span>/monthly</span></div>
+                <ul>
+                    <li><i class="fas fa-check"></i> 1000+ downloads</li>
+                    <li><i class="fas fa-check"></i>No transaction fees</li>
+                    <li><i class="fas fa-check"></i>unlimited storage</li>
+                    <li><i class="fas fa-check"></i>5 downloads</li>
+                </ul>
+                <a href="#" class="btn">check out</a>
+            </div>
 
 
+        </div>
+    </secion>
 
 </body>
 
